--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "@babel/plugin-transform-runtime": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-typescript": "^7.22.5",
+    "@types/cls-hooked": "^4.3.8",
     "@types/jest": "^29.5.4",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -34,8 +36,12 @@
     "@babel/runtime": "7.23.8",
     "@types/express": "^4.17.21",
     "awilix": "^10.0.1",
+    "cls-hooked": "^4.2.2",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "jest": "29.7.0",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   }
 }
