--- a/backend/package.json
+++ b/backend/package.json
@@ -37,9 +37,13 @@
     "@types/express": "^4.17.21",
     "awilix": "^10.0.1",
     "cls-hooked": "^4.2.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "jest": "29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
+    "pg": "^8.11.3",
     "pm2": "^5.3.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
