--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,18 @@ services:
       - ./frontend/docker/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+  postgres:
+    image: postgres:13
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: rello
+    ports:
+      - "5432:5432"
