--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,10 @@
     "@babel/plugin-transform-runtime": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-typescript": "^7.22.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/cls-hooked": "^4.3.8",
     "@types/jest": "^29.5.4",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.1.0",
@@ -36,6 +38,7 @@
     "@babel/runtime": "7.23.8",
     "@types/express": "^4.17.21",
     "awilix": "^10.0.1",
+    "bcrypt": "^5.1.1",
     "cls-hooked": "^4.2.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
